Restored version 3 to previous version
5b45d1adf7d18e0f0e92bbbc997c752e42be2109

--- a/buttercubes 3.css
+++ b/buttercubes 3.css
@@ -1,4 +1,3 @@
-@-moz-document url-prefix("https://corporatesolutions.glasscubes.com") {
 /* Buttercubes 3 - Simply delicious.
 /*
 /* What are the goals of this venture?
@@ -13,15 +12,13 @@
 /* Globals */
 :root {
     --container-spacing: 15px;
-    --main-content-width: 775px;
+    --main-content-width: 850px;
     --nav-bar-width: 260px;
     --detail-width: 445px;
-    --header-height: 62px;
     --buttercubes-logo: url("https://raw.githubusercontent.com/filcuk/Buttercubes/master/res/buttercubes2_logo.png");
     
     --nav-bar-offset: calc(var(--nav-bar-width) + var(--container-spacing) * 1);
     --main-content-offset: calc(var(--main-content-width) + var(--container-spacing))
-    --full-content-width: calc(775 + 15 + 445 + 15 - 400)px;
 }
 
 /* SORT THIS */
@@ -47,14 +44,9 @@
 
 /* Fix content wrapper
 */
-#root {
-    margin: var(--header-height) 0 0 var(--nav-bar-width) !important;
-    max-width: 1300px !important;
-}
 #content {
     padding: 0 !important;
-    
-/*    max-width: var(--full-content-width) !important; /* << NORMALIZWE THIS */
+    margin: 63px 0 0 260px !important;
 }
 #content .workspace-nav-content-wrapper {
     min-height: 400px !important;
@@ -70,8 +62,8 @@
 }
 #content .container-fluid .col-xs-5 {
     width: var(--detail-width);
+    left: 1100 !important; /*var(--main-content-offset);*/
     padding: 0;
-    float: right;
 }
 
 /* Task manager */
@@ -127,13 +119,6 @@
     margin-top: 0;
 }
 
-/* highlight the origin of task */
-#idd33 {
-    margin: 0 !important;
-    padding: 5px 15px;
-    background: #e8e8e8;
-}
-
 /* Task filter sidebar
 /* - always visible, fix width
 /* - fit underneath task detail
@@ -159,7 +144,7 @@
 /* - presumed always pinned
 /* - fix spacing once removed
 */
-#nav > .pin-nav, #nav > .mainnav-minmax.tooltip {
+#nav > .pin-nav {
     display: none;
 }
 #nav > ul {
@@ -348,7 +333,7 @@ ul.workspace-options-links a:hover, ul.workspace-options-links .active a {
 /* Labels not readable on light bg's
 /* - apply shadow around text
 */
-span.label, span.name-label, li.ui-menu-item {
+.label, .name-label, .ui-menu-item {
     text-shadow:
          1px  1px 0.3px #0006,
          1px -1px 0.3px #0006,
@@ -369,4 +354,3 @@ span.label, span.name-label, li.ui-menu-item {
 
 
 /* END */
-}
