--- a/buttercubes 4.css
+++ b/buttercubes 4.css
@@ -1,4 +1,3 @@
-@-moz-document domain("corporatesolutions.glasscubes.com") {
 /* Buttercubes 4 - Butterlicious.
 /*
 /* What are the goals of this venture?
@@ -10,21 +9,161 @@
 /* https://github.com/filcuk/buttercubes
 */
 
+:root {
+	--page-width: 1300px;
+	--nav-width: 220px;
+	--csl-green: #4cb332;
+	--gc-gray: #737373;
+	--bc-logo: url("https://raw.githubusercontent.com/filcuk/Buttercubes/master/res/buttercubes2_logo.png");
+}
 
+/*****************************************************************/
 #root {
-	width: 1300px;
+	width: var(--page-width);
 	margin: auto;
+	display: flex;
 }
 
+
+/*****************************************************************/
 #top {
-	
+	width: calc(var(--page-width) - var(--nav-width));
+	left: var(--nav-width);
+	margin: auto;
+	height: 50px;
+	border-top: 3px solid var(--csl-green) !important;
+	display: block;
+	box-sizing: content-box;
 }
 
+#top > .top-header-container {
+	height: inherit;
+}
+
+#top > .top-header-container > .top-header-container-left-col {
+	width: 50px;
+	height: inherit;
+	background: none;
+}
+
+nav#user {
+	height: inherit;
+}
+
+/* USER */
+
+nav#user > .gc-logo {
+	display: none;
+}
+
+nav#user > ul.top-right-links,
+nav#user > ul.three-dots {
+	padding: 11px 0;
+}
+
+nav#user > #id2457.quick-add-menu {
+	padding: 8px 0;
+	margin: 0;
+}
+
+/* SEARCH */
+nav#user > .global-search-panel.top-header-search-container {
+	margin-top: 7px;
+}
+
+
+
+/* LOGO */
+#logo {
+	width: 50px;
+	height: 50px;
+	overflow: hidden;
+}
+
+#logo img {
+	background: var(--bc-logo) no-repeat;
+	background-position: left center;
+	background-size: contain;
+	padding-left: 50px;
+	left: 10px;
+}
+
+/*****************************************************************/
 #nav {
-	position: static;
-}
-
-#content {
+	left: auto;
+	top: 0;
+	width: var(--nav-width) !important;
+	border-top: 3px solid var(--csl-green);
 	
 }
+
+#nav > h2 {
+	display: none;
+}
+
+#nav > ul {
+	padding-right: 10px;
+	margin-top: 0;
+}
+
+/* add fade to the nav bar items */
+#nav > ul:before {
+	content: '';
+	width: calc(100% - 10px);
+	height: 100%;
+	left: 0;
+	top: 0;
+	z-index: 4;
+	pointer-events: none;
+	position: absolute;
+	background: linear-gradient(
+		to right,
+		transparent calc(var(--nav-width) - 35px),
+		var(--gc-gray)
+	);
+}
+
+#nav a {
+	width: 100%;
+}
+
+#nav > div.wkhvname {
+	left: auto;
+	padding: 3px 11px 2px;
+}
+
+/* Nav bar 'workspace' toolbox
+/* - hide nonsense
+/* - keep always visible filter
+/* - fix wierd height setting
+*/
+#workspacelink, #nav .nav-add-ws-icon, #nav .search, .ws-filter-container > .man-tooltip {
+    display: none !important;
+}
+#nav > ul > .work-spaces {
+    border-top: none !important;
+}
+.ws-filter-container {
+    width: 100% !important;
+}
+#worksp-filter {
+    display: block !important;
+    padding: 0px !important;
+    height: auto !important;
+    margin: 5px 0;
+}
+#wsp-filter-name {
+    border: none !important;
+    border-radius: 0 !important;
+    background: #666 !important;
+    padding: 15px 13px !important;
+}
+#id4620 {
+    height: 100% !important;
+}
+
+/*****************************************************************/
+#content {
+	left: var(--nav-width);
+	padding: 0 !important;
 }
