--- a/buttercubes 4.css
+++ b/buttercubes 4.css
@@ -11,7 +11,8 @@
 */
 
 :root {
-	/* stolen from Stackoverflow */
+	/* stolen from Stackoverflow - for testing only */
+	/*
 	--white: #fff;
 	--black: #0c0d0e;
 	--orange: #f48024;
@@ -20,6 +21,7 @@
 	--blue: #0077cc;
 	--powder: #e1ecf4;
 	--red: #d1383d;
+	*/
 	--black-025: #fafafb;
 	--black-050: #eff0f1;
 	--black-075: #e4e6e8;
@@ -35,6 +37,7 @@
 	--black-750: #2f3337;
 	--black-800: #242729;
 	--black-900: #0c0d0e;
+	/*
 	--orange-050: #fff7f2;
 	--orange-100: #fee3cf;
 	--orange-200: #fcd0ad;
@@ -105,6 +108,7 @@
 	--bronze: #caa789;
 	--bronze-lighter: #f2e9e1;
 	--bronze-darker: #ab825f;
+	*/
 	
 	/* custom vars */
 	--page-width: 1200px;
@@ -112,10 +116,17 @@
 	--nav-width: 220px;
 	--cnav-height: 36px;
 	--content-width: calc(var(--page-width) - var(--nav-width));
+	--article-width: calc(var(--content-width) - 38%);
+	--detail-width: calc(var(--content-width) - var(--article-width));
+	--news-height: 140px;
 	--csl-green: #4cb332;
 	--gc-gray: #737373;
 	--bc-logo: url("https://raw.githubusercontent.com/filcuk/Buttercubes/master/res/buttercubes2_logo.png");
 }
+
+/* NOTES
+- Do not use GC generated ID's (non-readable), they change on refresh
+
 
 /*****************************************************************/
 #root {
@@ -160,7 +171,7 @@ nav#user > ul.three-dots {
 	padding: 9px 0;
 }
 
-nav#user > #id2457.quick-add-menu {
+nav#user > .quick-add-menu {
 	padding: 6px 0;
 	margin: 0;
 }
@@ -204,29 +215,20 @@ nav#user > .global-search-panel.top-header-search-container {
 }
 
 #nav > ul {
-	padding-right: 10px;
 	margin-top: 0;
 }
 
-/* add fade to the nav bar items */
-#nav > ul:before {
-	content: '';
-	width: calc(100% - 10px);
-	height: 100%;
-	left: 0;
-	top: 0;
-	z-index: 4;
-	pointer-events: none;
-	position: absolute;
-	background: linear-gradient(
-		to right,
-		transparent calc(var(--nav-width) - 35px),
-		var(--gc-gray)
-	);
-}
+/* NAV: Better overflow handling */
 
-#nav a {
+#nav > ul .workspaceView-item > a {
 	width: 100%;
+	padding-right: 0 !important;
+}
+#nav > ul span.cubeName {
+	width: 100%;
+}
+#nav > ul .workspaceView-item.sub .workspaceView-item {
+	padding-right: 11px;
 }
 
 #nav > div.wkhvname {
@@ -255,25 +257,35 @@ nav#user > .global-search-panel.top-header-search-container {
     margin: 5px 0;
 }
 #wsp-filter-name {
+	top: 0 !important;
     border: none !important;
     border-radius: 0 !important;
     background: #666 !important;
     padding: 15px 13px !important;
 }
-#id4620 {
+#nav > ul > .sub.work-spaces {
     height: 100% !important;
 }
 
 /*****************************************************************/
 #content {
+	width: var(--content-width);
 	left: var(--nav-width);
 	padding: 0 !important;
+	margin-top: var(--top-height);
+}
+
+#content > div:first-child {
+	display: none;
+}
+
+#content > .container-fluid {
+	padding: 0;
 }
 
 /* CONTENT NAV */
 article#content > nav.workspace-nav {
 	background: var(--black-100);
-	margin-top: var(--top-height);
 	height: var(--cnav-height) !important;
 	width: 100%;
 	position: static;
@@ -314,10 +326,6 @@ article#content > nav.workspace-nav {
 }
 
 
-/* CONTENT */
-article#content > div.workspace-nav-content-wrapper {
-	/*margin-top: calc(var(--top-height) + var(--cnav-height));*/
-}
 /* CONTENT: WS NAME */
 #content .ws-name-container {
 	position: sticky;
@@ -344,9 +352,66 @@ article#content > div.workspace-nav-content-wrapper {
 }
 
 /* CONTENT: CONTAINER */
+#content > .container-fluid > .row.mg-top-15 {
+	margin: 0;
+}
+
 #content .workspace-nav-content-container {
 	margin: 0px 0 0 0px;
 }
 
+#content .row >.col-xs-7 {
+	width: var(--article-width);
+	padding: 0;
+}
+
+#content .row >.col-xs-5 {
+	width: var(--detail-width);
+	padding: 0;
+}
+
+/* CONTENT: ANNOUCMENTS */
+#content .announcement-container {
+	margin: 0 !important;
+	border-radius: 0;
+	height: var(--news-height);
+}
+
+#content .announcement-container .row .col-xs-12,
+#content .announcement-container .image-container,
+#content .announcement-container .content-container {
+	height: var(--news-height);
+} 
+
+#content .announcement-container > .row {
+	margin: 0 !important;
+}
+
+#content .announcement-container > .row > div {
+	padding: 0 !important;
+}
+
+#content .announcement-container .image-container {
+	width: var(--news-height);
+	border-radius: 0 !important;
+}
+
+#content .announcement-container .content-container {
+	width: calc(100% - var(--news-height)) !important;
+	/*display: flex;*/
+}
+
+#content .announcement-container .content-wrapper {
+	width: 100%;
+	padding: 8px 12px;
+}
+
+#content .announcement-container .content-container .title-container {
+	line-height: 1.3;
+}
+
+#content .announcement-container .content-container .summary-container {
+	margin-top: 8px;
+}
 /* NOTE!! : NEED TO SET FLEX PROPS ON CONTENT TO NOT STRETCH OUT OF BOUNDS */
 }
